statum-macros/tests/ui/invalid_state_not_enum.stderr
error: Error: #[state] must be applied to an enum.
       Found: `struct NotAnEnum { ... }`
       Expected: `enum NotAnEnum { Draft, InReview(InReviewData) }`
       Fix: change `NotAnEnum` from a struct into a `#[state]` enum, or remove `#[state]`.
  --> tests/ui/invalid_state_not_enum.rs:13:8
   |
13 | struct NotAnEnum {
   |        ^^^^^^^^^

error[E0601]: `main` function not found in crate `$CRATE`
  --> tests/ui/invalid_state_not_enum.rs:15:2
   |
15 | }
   |  ^ consider adding a `main` function to `$DIR/tests/ui/invalid_state_not_enum.rs`
